--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+     - images/logo_polinema.png
+     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
